security/networkpolicy-test-app.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: flask-network-test

spec:
  replicas: 1

  selector:
    matchLabels:
      app: flask-network-test

  template:
    metadata:
      labels:
        app: flask-network-test

    spec:
      containers:
      - name: flask

        image: hawku13/flask-api:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 5000

---

apiVersion: v1
kind: Service

metadata:
  name: flask-service

spec:
  selector:
    app: flask-network-test

  ports:
  - port: 5000
    targetPort: 5000

  type: ClusterIP
