security/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: deny-all-ingress-to-flask

spec:
  podSelector:
    matchLabels:
      app: flask-network-test

  policyTypes:
  - Ingress
